# energyscholar-rag

./: .env.example  .gitignore  Makefile  README.es.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
dashboards/: app.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  RUNBOOK.md
evaluation/golden_set/: qa.jsonl
scripts/: bootstrap.sh  env.sh
src/: __init__.py
src/embedding/: embedder.py  run_index.py
src/eval/: golden.py  run_ragas.py
src/generation/: rag.py
src/ingestion/: arxiv_client.py  pdf_parser.py  run_arxiv.py
src/llm/: client.py
src/retrieval/: hybrid.py
src/serving/: api.py
src/utils/: config.py  logging.py  qdrant.py
tests/: conftest.py  test_api.py  test_llm_client.py  test_pdf_parser.py  test_rag_format.py
