[project]
name = "energyscholar"
version = "0.1.0"
description = "RAG assistant for energy forecasting research papers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG", "PL"]
ignore = ["PLR0913", "PLR2004", "PLR0915"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "integration: tests that hit external services",
    "slow: tests that take >1s",
    "ragas: RAGAS eval tests (slow, expensive)",
]
asyncio_mode = "auto"
